--- a/nerin_final_updated/frontend/style.css
+++ b/nerin_final_updated/frontend/style.css
@@ -1291,6 +1291,7 @@ footer .legal {
 .product-page .product-gallery__slide {
   min-width: 100%;
   height: 100%;
+  margin: 0;
   padding: 0.75rem;
   display: grid;
   place-items: center;
